--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
   "scripts": {
     "start": "node bot.js",
     "dev": "nodemon bot.js",
-    "deploy": "node deploy.js"
+    "deploy": "node deploy.js",
+    "pm2:start": "pm2 start bot.js --name telegram-bot --max-memory-restart 300M",
+    "pm2:stop": "pm2 stop telegram-bot",
+    "pm2:restart": "pm2 restart telegram-bot",
+    "pm2:delete": "pm2 delete telegram-bot",
+    "pm2:logs": "pm2 logs telegram-bot",
+    "pm2:status": "pm2 status",
+    "pm2:save": "pm2 save",
+    "pm2:startup": "pm2 startup"
   },
   "dependencies": {
     "node-telegram-bot-api": "^0.64.0",
